# sephora-reviews

./: .env_example  README.md  data-loading.ipynb  dataset-setup.ipynb  pyproject.toml  test-queries.ipynb
